--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <h2 style="color:white; text-align:left; padding-top; 30px; font-size: 30px; text-shadow: 2px 2px  10px rgb(168, 0, 247);">MENU:</h2>
     <a href="podstrona1/kontakt.html">Kontakt</a>
     <br>
-    <a href="podstrona2/zapis.html">Zapisy</a>
+    <a href="zapis.html">Zapisy</a>
     <br>
-    <a href="podstrona3/dlaczego_my.html">Dlaczego warto nas wybrac ?</a>
+    <a href="dlaczego_my.html">Dlaczego warto nas wybrac ?</a>
     <br>
     <br>
     <br>
