--- a/zapis.html
+++ b/zapis.html
@@ -13,7 +13,7 @@ body{
 h1{
 
     color: rgb(0, 0, 0);
-    background-image: url("/Users/mac/Desktop/Strony_TCwB_SandraSiwak/niebo.jpeg");
+    background-image: url("niebo.jpeg");
     background-size: 500px 500px;
     text-align: center;
     font-style: oblique;
