--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p style="color:white; text-align: center; padding-top; 30px; font-size: 15px;"> Zapisz sie juz teraz i rozpocznij swoja przygode ze swiatem kodowania!</p><br>
     <br>
     <h2 style="color:white; text-align:left; padding-top; 30px; font-size: 30px; text-shadow: 2px 2px  10px rgb(168, 0, 247);">MENU:</h2>
-    <a href="podstrona1/kontakt.html">Kontakt</a>
+    <a href="kontakt.html">Kontakt</a>
     <br>
     <a href="zapis.html">Zapisy</a>
     <br>
